<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Crossword</string>

  <string name="letters">Letters:</string>
  <string name="anagram">Anagram</string>
  <string name="hint">Enter word or phrase</string>

  <string name="num_1">1</string>
  <string name="num_2">2</string>
  <string name="num_3">3</string>
  <string name="num_4">4</string>
  <string name="num_5">5</string>
  <string name="num_6">6</string>
  <string name="num_7">7</string>
  <string name="num_8">8</string>
  <string name="num_9">9</string>
  <string name="num_0">0</string>

  <string name="about">About</string>
  <string name="version" formatted="false"><a
  href="https://github.com/billthefarmer/crossword/releases/latest">%s</a>\n\nBuilt
  %s\n\nCopyright \u00A9 2017 Bill Farmer\n\nLicence <a
  href="https://www.gnu.org/licenses/gpl.txt">GNU GPLv3</a>
  </string>

  <string name="share">Share</string>
  <string name="theme">Theme</string>
  <string name="light">Light</string>
  <string name="dark">Dark</string>
  <string name="cyan">Cyan</string>
  <string name="blue">Blue</string>
  <string name="orange">Orange</string>
  <string name="purple">Purple</string>
  <string name="red">Red</string>
  <string name="black">Black</string>
  <string name="white">White</string>
  <string name="dict">Dictionary</string>
  <string name="aard2">Aard2</string>
  <string name="quickdic">Quickdic</string>
  <string name="wikt">Wictionary</string>
  <string name="help">Help</string>

</resources>
