<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item
      android:id="@+id/action_share"
      android:icon="?attr/menu_share"
      android:showAsAction="ifRoom"
      android:title="@string/share" />

  <item
      android:id="@+id/action_about"
      android:icon="?attr/menu_info"
      android:showAsAction="ifRoom"
      android:title="@string/about" />

  <item
      android:id="@+id/action_theme"
      android:showAsAction="never"
      android:title="@string/theme">
    <menu>

        <item
            android:id="@+id/action_light"
            android:showAsAction="never"
            android:title="@string/light" />

        <item
            android:id="@+id/action_dark"
            android:showAsAction="never"
            android:title="@string/dark" />

        <item
            android:id="@+id/action_cyan"
            android:showAsAction="never"
            android:title="@string/cyan" />

        <item
            android:id="@+id/action_blue"
            android:showAsAction="never"
            android:title="@string/blue" />

        <item
            android:id="@+id/action_orange"
            android:showAsAction="never"
            android:title="@string/orange" />

        <item
            android:id="@+id/action_purple"
            android:showAsAction="never"
            android:title="@string/purple" />

        <item
            android:id="@+id/action_red"
            android:showAsAction="never"
            android:title="@string/red" />

        <item
            android:id="@+id/action_black"
            android:showAsAction="never"
            android:title="@string/black" />

        <item
            android:id="@+id/action_white"
            android:showAsAction="never"
            android:title="@string/white" />

    </menu>
  </item>

  <item
      android:id="@+id/dict"
      android:showAsAction="never"
      android:title="@string/dict">
    <menu>
      <group android:checkableBehavior="single">

        <item
            android:id="@+id/wikt"
            android:checked="true"
            android:title="@string/wikt" />

        <item
            android:id="@+id/aard2"
            android:title="@string/aard2" />

        <item
            android:id="@+id/quickdic"
            android:title="@string/quickdic" />

      </group>
    </menu>
  </item>

</menu>
